# n-body

./: .gitignore  Cargo.toml  README.md  TODO.md  flake.nix
.cargo/: config.toml
.github/workflows/: rust.yml
src/: camera.rs  gui.rs  input.rs  lib.rs  main.rs  motion.rs  particle.rs  simulation.rs
src/gui/: debug.rs  design.md  mod.rs  performance.rs  performance_gui.rs  settings.rs  simulation_controls.rs  tools.rs  views.rs
src/particle/: mod.rs  spawners.rs
src/render/: mod.rs
src/simulation/: collisions.rs  gravity.rs  mod.rs  motion.rs  quadtree.rs
