[package]
name = "n-body"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16", features = ["wayland"] }
bevy_egui = {version = "0.34", features = ["bevy_picking"]}
egui_plot = "0.32"
rand = "0.9"
rand_pcg = "0.9"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
