[package]
name = "n-body"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_egui = "0.36"
rand = "0.9"
rand_pcg = "0.9"

[dependencies.bevy]
version = "0.16"
default-features = false
features = [
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_log",
  "bevy_picking",
  "bevy_render",
  "bevy_sprite",
  "bevy_window",
  "bevy_winit",
  "multi_threaded",
  "std",
  "wayland",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
